--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
   },
   "extends": "standard",
   "rules": {
-    "semi": ["error", "always"]
+    "semi": ["error", "always"],
+    "yoda": 0
   }
 }
