--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "JSONStream": "^1.3.1",
+    "body-parser": "^1.18.2",
     "command-line-args": "^4.0.7",
     "connect": "^3.6.2",
     "connect-body-rewrite": "^0.0.4",
